--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
         <script src="./scripts.js" defer></script>
     </head>
     <body>
-        Hello world!
+        <header>
+            <h1>Tic-Tac-Toe</h1>
+        </header>
+        <main>
+            Main Content
+        </main>
+        <footer>
+            <p>Copyright &copy; Khirby Calma <script>document.write(new Date().getFullYear())</script></p>
+        </footer>
     </body>
 </html>
