Add visual board grid

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Tic-Tac-Toe</h1>
         </header>
         <main>
-            Main Content
+            <div id="game-grid"></div>
         </main>
         <footer>
             <p>Copyright &copy; Khirby Calma <script>document.write(new Date().getFullYear())</script></p>
